<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/horas24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/horas24" />

        <RadioButton
            android:id="@+id/horas12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/horas12" />

        <RadioButton
            android:id="@+id/hora1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/hora1" />

        <RadioButton
            android:id="@+id/min30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/min30" />

        <RadioButton
            android:id="@+id/min15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/min15" />

        <RadioButton
            android:id="@+id/noActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/noActualizar" />

    </RadioGroup>
</LinearLayout>